# cleanfade

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  requirements.txt  spotify_duck.py  vite.config.js
.github/workflows/: release.yml
scripts/: build_sidecar.ps1
src/: App.jsx  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
